2022-01-24  Mark Lam  <mark.lam@apple.com>

        Add FixedVector::clear(), contains(), find(), and findMatching().
        https://bugs.webkit.org/show_bug.cgi?id=234855

        Reviewed by Yusuke Suzuki.

        * wtf/FixedVector.h:
        (WTF::FixedVector::clear):
        (WTF::FixedVector<T>::contains const):
        (WTF::FixedVector<T>::findMatching const):
        (WTF::FixedVector<T>::find const):

2022-01-21  Yusuke Suzuki  <ysuzuki@apple.com>

        [JSC] Relax Date.parse requirement
        https://bugs.webkit.org/show_bug.cgi?id=235468

        Reviewed by Darin Adler.

        While the spec does not require accepting 't' / ' ' separator, ISO 8601 accepts it.
        This is because ECMA262's Date format is *not* ISO 8601 (it is called simplification
        of ISO 8601[1]).
        This patch relaxes this strictness to accept more formats, which can be accepted in
        the other engines too.

        [1]: https://tc39.es/ecma262/#sec-date-time-string-format

        * wtf/DateMath.cpp:
        (WTF::parseES5DateFromNullTerminatedCharacters):

2022-01-21  Sihui Liu  <sihui_liu@apple.com>

        Disable CFURLCache in WebKit2
        https://bugs.webkit.org/show_bug.cgi?id=234988
        <rdar://problem/87619196>

        Reviewed by Geoffrey Garen.

        * wtf/PlatformHave.h:

2022-01-21  Mike Gorse  <mgorse@suse.com>

        Build failure with g++ 12: std::exchange undefined
        https://bugs.webkit.org/show_bug.cgi?id=235445

        Reviewed by Michael Catanzaro.

        * wtf/CompletionHandler.h: Include <utility>
        * wtf/MallocPtr.h: Ditto

2022-01-20  Said Abou-Hallawa  <said@apple.com>

        [Cocoa] Accelerated filters are enabled by the wrong setting
        https://bugs.webkit.org/show_bug.cgi?id=235376

        Reviewed by Simon Fraser.

        Delete ENABLE_CORE_IMAGE_ACCELERATED_FILTER_RENDER and use USE_CORE_IMAGE
        instead since CoreImage is only used for filters right now. Besides 