@@ -1,3 +1,15 @@
+2022-01-24  Michael Catanzaro  <mcatanzaro@gnome.org>
+
+        REGRESION(r288200): [GTK][WPE] Build broken on Ubuntu 18.04
+        https://bugs.webkit.org/show_bug.cgi?id=235401
+
+        Reviewed by Adrian Perez de Castro.
+
+        This implements WTF_CRASH_UNDER_CONSTEXPR_CONTEXT() properly for compatibility with older
+        compilers.
+
+        * wtf/Assertions.h:
+
 2022-01-24  Mark Lam  <mark.lam@apple.com>
 
         Add FixedVector::clear(), contains(), find(), and findMatching().
